[package]
name = "x1-emu"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
z80 = "1.0.2"
env_logger = "0.10"
log = "0.4"
pixels = "0.11"
winit = "0.28.3"
winit_input_helper = "0.14"
egui_memory_editor = "0.2.2"
egui = "0.21.0"
egui-wgpu = "0.21.0"
egui-winit = "0.21.0"
savefile="0.13"
savefile-derive="0.13"

[patch.crates-io]
pixels = { git = 'https://github.com/parasyte/pixels.git' }
egui_memory_editor = { git = 'https://github.com/Hirtol/egui_memory_editor.git' }
winit_input_helper = { git = 'https://github.com/rukai/winit_input_helper.git' }